SFD-5602 Enable nhs choices in fuzzy (#334)
* SFD-5603 Fixed merge conflict

* SFD-5602 Concurrently display nhs choices services

* SFD-XXXX Lower coverage to build application - revert

* SFD-5602 Increase time out on response

* SFD-5602 Increase time out on response

* SFD-5602 Fix unit test and test coverage

* SFD-5602 Fix unit test and test coverage^2

* SFD-5602 add search location to terms

* SFD-5602 add search location to terms

* SFD-5602 add search location to terms

* SFD-5602 add search location to terms

* VS-344 Add search param on first search

* SFD-5602 Remove Unit test tage

* SFD-5602 Return half results of each source

* SFD-5602 Return half results of each source

* SFD-5602 Return half results of each source

* SFD-5602 Add json property to model class

* SFD-5602 Add loggin points

* SFD-5602 Add loggin points

* SFD-5602 Add async task bean

* SFD-5602 Add unit tests to build stage

* SFD-5602 Increase test coverage

* SFD-5602 Increase test coverage

* SFD-5602 Increase test coverage^2

* SFD-5602 Increase test coverage^3

* SFD-5602 Increase test coverage^4

* SFD-5602 Increase test coverage^5

* SFD-5602 Increase test coverage^6

* SFD-5603 Resolve merge conflicts

* SFD-5603 Resolve merge conflicts^2

* "SFD-5603 Resolve merge conflicts^5"

* SFD-5603 Resolve merge conflicts^6

* SFD-5603 Resolve merge conflicts^7

* SFD-5603 Resolve merge conflicts^8

* SFD-5603 Increased coverage percentage from 60% to 80%

* SFD-5603 Deleted FuzzyServiceSearchService class

* SFD-5603 Upgraded jacoco plugin version

* SFD-5603 Fixed issue with NHSChoicesV2DataModel

* SFD-5603 Added nhs properties to profile files

---------

Co-authored-by: Daniel Osae <daniel.osae@nhs.net>
Co-authored-by: Rohit kondapalli <rohit.kondapalli1@nhs.net>